--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,11 @@
                 android:resource="@xml/accessibility_config" />
         </service>
 
+        <!-- Overlay Blocker Service -->
+        <service android:name=".overlay.OverlayBlockerService"
+            android:exported="false" />
+
+
         <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
@@ -63,5 +68,7 @@
     <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
 
 </manifest>
