--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,12 @@
             </intent-filter>
         </receiver>
 
+        <receiver android:name=".StartPinReceiver" android:exported="true">
+            <intent-filter>
+                <action android:name="com.example.numbux.SHOW_PIN"/>
+            </intent-filter>
+        </receiver>
+
         <!-- Accessibility Service -->
         <service
             android:name=".accessibility.AppBlockerService"
@@ -59,15 +65,25 @@
         <!-- Pin Activity -->
         <activity
             android:name=".ui.PinActivity"
-            android:exported="false"
-            android:theme="@style/Theme.Numbux" />
+            android:theme="@android:style/Theme.DeviceDefault.Dialog"
+            android:exported="true"
+            android:excludeFromRecents="true"
+            android:launchMode="singleTop"
+            android:taskAffinity=""
+            android:windowSoftInputMode="adjustResize" />
 
     </application>
 
     <!-- Permissions -->
     <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
+    <queries>
+        <!-- Necesario si usas PackageManager para obtener apps instaladas -->
+        <intent>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent>
+    </queries>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
 
