Funcione bloqueo incluso cuando se cierra la app
Por hacer:

* Manera de que no se pueda desinstalar la app porque tarda microsegundos pero si se mantiene pulsando, sí se puede

* Quitar botón que dice "Abrir pantalla de Pin" en NumbuX

* Poner PIN para cuando se quiere desactivar el boton manualmente.

* Distinto PIN y Pantalla para:
** Quitar accesibility y uninstall
** Desbloqueo de las apps

* Mandar notificación al instalar para llevarle a la app y ahí le salte el pop up. Y que cada 1min le vuelva a saltar para activar accesibilidad en ajustes.
-- Y que esa notificación le lleva a accesibility

* Se instale la app que esté el botón en OFF

* activar una manera de hacer el lock remotamente

La app SÍ HACE:
- Bloquea todas las apps
- No se impide buscar dentro de ajustes (lupa)
- Aparece una Ventana si no se ha dado el permiso en accesibility.
- Redirige a Accesibility.
- Impide la desactivación de privilegios de accesibility sin poner el pin
- Cuando pones el PIN correcto, la pantalla desaparece
- Pide el PIN para desinstalar la aplicación
- Se puede poner el PIN para desinstalar y después ya no se vuelve a preguntar
- Boton para activar/desactivar bloqueo
- En cada ciclo que se desactiva y activa el bloqueo manualmente, se resetea qué se ha desbloqueado. (vuelve a preguntar)
- Excluir accesibility y desintalar del botón del bloqueo de apps. Están siempre bloqueadas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         <service
             android:name=".accessibility.AppBlockerService"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
-            android:exported="false">
+            android:exported="false"
+            android:stopWithTask="false">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
             </intent-filter>
