No hay gap entre el boton de desinstalar y que se muestre PIN WINDOW
Por hacer:

* Quitar de dentro de la app el icono de  ajustes que permite ver el timeout y si está activo el bloqueo

* Manera de que no se vean las aplicaciones cuando se pulsa el multitareas. Es una manera de copiar.

* Quitar botón que dice "Abrir pantalla de Pin" en NumbuX

* Poner PIN para cuando se quiere desactivar el boton manualmente.

* Distinto PIN y Pantalla para:
** Quitar accesibility y uninstall
** Desbloqueo de las apps

* Mandar notificación al instalar para llevarle a la app y ahí le salte el pop up. Y que cada 1min le vuelva a saltar para activar accesibilidad en ajustes.
-- Y que esa notificación le lleva a accesibility

* Cuando se instale la app que esté el botón en OFF

* activar una manera de hacer el lock remotamente

La app SÍ HACE:
- Bloquea todas las apps
- No se impide buscar dentro de ajustes (lupa)
- Aparece una Ventana si no se ha dado el permiso en accesibility.
- Redirige a Accesibility.
- Impide la desactivación de privilegios de accesibility sin poner el pin
- Cuando pones el PIN correcto, la pantalla desaparece
- Pide el PIN para desinstalar la aplicación
- Se puede poner el PIN para desinstalar y accesibility. Después ya no se vuelve a preguntar
- Boton para activar/desactivar bloqueo
- En cada ciclo que se desactiva y activa el bloqueo manualmente, se resetea qué se ha desbloqueado. (vuelve a preguntar)
- Excluir accesibility y desintalar del botón del bloqueo de apps. Están siempre bloqueadas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,11 @@
 
         <!-- Device Admin Receiver -->
         <receiver
+            android:exported="true"
             android:name=".admin.MyDeviceAdminReceiver"
-            android:permission="android.permission.BIND_DEVICE_ADMIN"
-            android:exported="true">
+            android:description="@string/device_admin_description"
+            android:label="@string/device_admin_label"
+            android:permission="android.permission.BIND_DEVICE_ADMIN">
             <meta-data
                 android:name="android.app.device_admin"
                 android:resource="@xml/device_admin_receiver" />
@@ -26,7 +28,9 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".StartPinReceiver" android:exported="true">
+        <receiver
+            android:name=".StartPinReceiver"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.example.numbux.SHOW_PIN"/>
             </intent-filter>
@@ -61,18 +65,29 @@
         <!-- Pin Activity -->
         <activity
             android:name=".ui.PinActivity"
-            android:theme="@style/Theme.Numbux.Fullscreen"
             android:exported="true"
+            android:launchMode="singleTask"
+            android:showOnLockScreen="true"
+            android:turnScreenOn="true"
             android:excludeFromRecents="true"
-            android:launchMode="singleTop"
-            android:taskAffinity=""
-            android:windowSoftInputMode="adjustResize" />
+            android:theme="@style/Theme.Numbux.PinDialog">
+        </activity>
 
+        <activity
+            android:name=".settings.SettingsActivity"
+            android:label="Settings"
+            android:parentActivityName=".MainActivity">
+            <!-- optional: add “up” navigation back to MainActivity -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
     </application>
 
     <!-- Permissions -->
     <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <queries>
         <!-- Necesario si usas PackageManager para obtener apps instaladas -->
         <intent>
