solo una app/icono para bloqueador y controlador
Si estoy dentro de una app and I turn on the button from the other phone, lock does not take action unless I go out from the app and I go back.
I did not realized about this until now because I couldnt make the lock works in other way.

* Si se pone la credencial de "bloqueado", mandar notificación para llevarle a la app y ahí que le salte el pop up de activar accesibility. Y que cada 2min le vuelva a saltar para activar accesibilidad en ajustes.

* when I press multitask, have a completely dark window covering all the window except the button of "close all"

La app SÍ HACE:
- Bloquea todas las apps
- No se impide buscar dentro de ajustes (lupa)
- Aparece una Ventana si no se ha dado el permiso en accesibility.
- Redirige a Accesibility.
- Impide la desactivación de privilegios de accesibility sin poner el pin
- Cuando pones el PIN correcto, la pantalla desaparece
- Pide el PIN para desinstalar la aplicación
- Se puede poner el PIN para desinstalar y accesibility. Después ya no se vuelve a preguntar
- Boton para activar/desactivar bloqueo
- En cada ciclo que se desactiva y activa el bloqueo manualmente, se resetea qué se ha desbloqueado. (vuelve a preguntar)
- Excluir accesibility y desintalar del botón del bloqueo de apps. Están siempre bloqueadas
- Preguntar PIN cuando se quiere desactivar manualmente
- El botón cuando la instalas está en OFF.
- La APK (la app), cuando te la descargas tiene dos iconos
1. NumbuX bloqueador
2. NumbuX controlador

Y bloquea el otro móvil.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,56 +17,15 @@
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:theme="@style/Theme.Numbux"
         tools:targetApi="31">
 
-        <!-- Device Admin Receiver -->
-        <receiver
-            android:exported="true"
-            android:name=".admin.MyDeviceAdminReceiver"
-            android:description="@string/device_admin_description"
-            android:label="@string/device_admin_label"
-            android:permission="android.permission.BIND_DEVICE_ADMIN">
-            <meta-data
-                android:name="android.app.device_admin"
-                android:resource="@xml/device_admin_receiver"/>
-            <intent-filter>
-                <action android:name="android.app.action.DEVICE_ADMIN_ENABLED"/>
-            </intent-filter>
-        </receiver>
-
-        <!-- Pin-on-demand Receiver -->
-        <receiver
-            android:name=".StartPinReceiver"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.example.numbux.SHOW_PIN"/>
-            </intent-filter>
-        </receiver>
-
-        <!-- Accessibility Service -->
-        <service
-            android:name=".accessibility.AppBlockerService"
-            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
-            android:exported="false"
-            android:stopWithTask="false">
-            <intent-filter>
-                <action android:name="android.accessibilityservice.AccessibilityService"/>
-            </intent-filter>
-            <meta-data
-                android:name="android.accessibilityservice"
-                android:resource="@xml/accessibility_config"/>
-        </service>
-
-        <!-- 1) Real blocker app entrypoint -->
+        <!-- LOGIN (single icon!) -->
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Numbux">
@@ -76,26 +35,21 @@
             </intent-filter>
         </activity>
 
-        <!-- 2) Alias → Controller mode (reuses ic_launcher) -->
-        <activity-alias
-            android:name=".ControllerLauncher"
-            android:targetActivity=".ControlActivity"
-            android:exported="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/controller_label">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity-alias>
+        <!-- real blocker UI -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Numbux" />
 
-        <!-- The actual controller Activity -->
+        <!-- controller UI -->
         <activity
             android:name=".ControlActivity"
             android:exported="false"
-            android:label="@string/controller_label"/>
+            android:label="@string/controller_label"
+            android:theme="@style/Theme.Numbux" />
 
-        <!-- Pin-entry dialog Activity -->
+        <!-- Pin dialog & other receivers/services… -->
         <activity
             android:name=".ui.PinActivity"
             android:exported="true"
@@ -103,7 +57,38 @@
             android:showOnLockScreen="true"
             android:turnScreenOn="true"
             android:excludeFromRecents="true"
-            android:theme="@style/Theme.Numbux.PinDialog"/>
+            android:theme="@style/Theme.Numbux.PinDialog" />
+
+        <receiver android:name=".StartPinReceiver" android:exported="true">
+            <intent-filter>
+                <action android:name="com.example.numbux.SHOW_PIN"/>
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".accessibility.AppBlockerService"
+            android:exported="false"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
+            android:stopWithTask="false">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/accessibility_config"/>
+        </service>
+
+        <receiver
+            android:name=".admin.MyDeviceAdminReceiver"
+            android:exported="true"
+            android:permission="android.permission.BIND_DEVICE_ADMIN">
+            <meta-data
+                android:name="android.app.device_admin"
+                android:resource="@xml/device_admin_receiver"/>
+            <intent-filter>
+                <action android:name="android.app.action.DEVICE_ADMIN_ENABLED"/>
+            </intent-filter>
+        </receiver>
 
     </application>
 </manifest>
