lanza el boton cuando el fondo ha cambiado
* Lanzar el boton cuando el cambio no lo haga la propia app.

* Notificacion cuando el wallpaper no lo cambio la app.

* Diferenciar foto del fondo de pantalla de la pantalla de bloqueo.

* Incluir una calculadora dentro del perfil estudiante y que esté al abrir la app.

* Quitar lo de bienvenido a Numbux

* El botón de bloquear tiene que estar a la izquierda, escondida por las 3 barritas típicas que despliegan un panel que sale de la izquierda.

* la imagen de dentro de la barra de notificaciones sigue siendo muy pequeña

La app SÍ HACE:
- Pide login para saber qué usuario eres.
- Si eres controller: solo boton para activar o desactivar

- Si eres estudiante:
- Salta notificacion que te redirige a accesibility.
- Venta dentro de la app que te lleva a accesibility.

- Boton controller y bloqueado sincronizados en todo momento. Incluso si reinicio y no vuelvo a abrir la app.

- Cuando estoy dentro de una app y con bloqueo desactivado y turn on desde Controller, se bloquea la app.

- Si pongo el PIN la ventana desaparece y no vuelve a aparecer hasta el próximo ciclo (se resetea).

- Con el bloqueo activo, y doy al multitarea, aparece una ventana negra. Si salgo de ahí se quita. Sin el bloqueo no aparece.

- Cuando intento turn off the button manualmente, pide el pin. También se desbloquea efectivamente.

- Con el bloqueo activo, se puede buscar en ajustes, en la lupa y se puede utilizar el teclado.

- Accesibility y Uninstall son independientes del botón.

- Impide la desactivación de privilegios de accesibility sin poner el pin y para desinstalar también. Luego ya se puede desinstalar.

- La primera vez que se instala, se pregunta por la foto que se quiere guardar para backup. Justo en ese momento el botón desaparece.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,5 +94,12 @@
                 <action android:name="android.app.action.DEVICE_ADMIN_ENABLED"/>
             </intent-filter>
         </receiver>
+
+        <receiver android:name=".WallpaperChangeReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.WALLPAPER_CHANGED"/>
+            </intent-filter>
+        </receiver>
     </application>
 </manifest>
