--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
     <uses-permission android:name="android.permission.SET_WALLPAPER"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <queries>
         <!-- Necesario si usas PackageManager para obtener apps instaladas -->
@@ -98,7 +99,10 @@
         <receiver android:name=".WallpaperChangeReceiver"
             android:exported="true">
             <intent-filter>
+                <!-- fire when the user changes their wallpaper outside your app -->
                 <action android:name="android.intent.action.WALLPAPER_CHANGED"/>
+                <!-- optionally, also on boot so you can re‑apply at startup -->
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
     </application>
